[package]
name = "construct-crypto"
version = "0.5.11"
edition = "2021"
authors = ["Construct Server Team"]
description = "Cryptographic primitives for Construct secure messaging server"
license = "MIT OR Apache-2.0"

[features]
default = ["full"]
full = ["e2ee", "delivery-ack", "pqc"]
e2ee = []           # End-to-end encryption (Signal Protocol)
delivery-ack = []   # Privacy-preserving delivery acknowledgments
pqc = ["post-quantum"]  # Post-quantum cryptography
post-quantum = []   # Internal feature for conditional compilation

[dependencies]
# Core crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"

# Encoding
base64 = "0.22"
hex = "0.4"

# PQC (optional)
# Note: Kyber was standardized as ML-KEM (NIST FIPS 203)
pqcrypto = { version = "0.18", optional = true }
pqcrypto-mlkem = { version = "0.1", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
prost = "0.14"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["sync"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
