[package]
name = "construct-db"
version = "0.5.11"
edition = "2021"
authors = ["Construct Server Team"]
description = "Database utilities for Construct secure messaging server"
license = "MIT OR Apache-2.0"

[dependencies]
# Crypto types
construct-crypto = { path = "../construct-crypto", features = ["e2ee"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

# Utilities
anyhow = "1.0"
bcrypt = "0.16"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
