[package]
name = "construct-db"
version.workspace = true
edition.workspace = true

[dependencies]
construct-crypto = { path = "../construct-crypto", features = ["e2ee"] }
construct-config = { path = "../construct-config" }
crypto-agility = { path = "../crypto-agility" }

sqlx = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prost = "0.14"

[dev-dependencies]
tokio = { workspace = true }
