[package]
name = "construct-extractors"
version.workspace = true
edition.workspace = true

[dependencies]
construct-db      = { path = "../construct-db" }
construct-error   = { path = "../construct-error" }

axum         = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2         = "0.10"
tracing    = { workspace = true }
tokio      = { workspace = true }
hex        = { workspace = true }
async-trait = { workspace = true }
