[package]
name = "construct-federation"
version.workspace = true
edition.workspace = true

[dependencies]
construct-types = { path = "../construct-types" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
