[package]
name = "construct-messaging-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-apns           = { path = "../construct-apns" }
construct-auth           = { path = "../construct-auth" }
construct-broker         = { path = "../construct-broker" }
construct-config         = { path = "../construct-config" }
construct-context        = { path = "../construct-context" }
construct-db             = { path = "../construct-db" }
construct-error          = { path = "../construct-error", features = ["full"] }
construct-extractors     = { path = "../construct-extractors" }
construct-federation     = { path = "../construct-federation" }
construct-key-management = { path = "../construct-key-management" }
construct-queue          = { path = "../construct-queue" }
construct-types          = { path = "../construct-types" }
construct-utils          = { path = "../construct-utils" }

anyhow     = "1.0"
axum       = { workspace = true }
hex        = "0.4"
hmac       = "0.12"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2       = "0.10"
sqlx       = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio      = { version = "1", features = ["sync"] }
tracing    = "0.1"
uuid       = { version = "1.11", features = ["v4"] }
