[package]
name = "construct-pending"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
